--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sqs-consumer",
-  "version": "5.2.0",
+  "name": "@qbatch/sqs-consumer",
+  "version": "5.2.1",
   "description": "Build SQS-based Node applications without the boilerplate",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
